--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Build
         run: bundle exec jekyll build
       - name: Default test
-        uses: percy/snapshot-action@master
+        uses: percy/snapshot-action@v0.1.0
         with:
           build-directory: "_site"
         env:
